k8s/dependencies/sampleAddresses/sampleAddresses.yaml
apiVersion: v1
kind: Service
metadata:
  name: sampleAddresses
  namespace: pm-streams
spec:
  ports:
    - port: 6000
      targetPort: 6000
  selector:
    app: sampleAddresses
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampleAddresses
  namespace: pm-streams
spec:
  selector:
    matchLabels:
      app: sampleAddresses
  template:
    metadata:
      labels:
        app: sampleAddresses
    spec:
      containers:
        - name: sampleAddresses
          image: sampleAddresses
          ports:
            - containerPort: 6000
          resources: 
            requests:
              cpu: "0.1"
              memory: "100Mi"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleAddresses-ingress
  namespace: pm-streams
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
spec:
  tls:
    - hosts:
        - streams.predictivemovement.se
      secretName: sampleaddresses-prod-tls
  rules:
    - host: streams.predictivemovement.se
      http:
        paths:
          - path: /addresses
            pathType: Prefix
            backend:
              service: 
                name: sampleAddresses
                port:
                  number: 6000
